# cse244a-final-project

./: .gitignore  README.md  cuda-ubuntu-setup.sh  main.py  pretrain.py  pyproject.toml  requirements.txt  setup.sh  specific_requirements.txt  train-1gpu.sh
models/: layers.py
