[project]
name = "tinyrecursivemodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic==1.3.3",
    "coolname==2.2.0",
    "einops==0.8.1",
    "huggingface-hub==0.34.4",
    "hydra-core==1.3.2",
    "ninja==1.13.0",
    "numba==0.61.2",
    "omegaconf==2.3.0",
    "packaging==24.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "setuptools==80.9.0",
    "setuptools-scm==9.2.0",
    "torch>=2.7",
    "tqdm==4.67.1",
    "triton==3.3.0",
    "wandb==0.21.3",
    "wheel==0.45.1",
]
